# vgi-iso20022

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: check-version.sh  preprocess-require.awk  run-integration.sh
crates/iso20022-core/: Cargo.toml
crates/iso20022-core/src/: charset.rs  cursor.rs  dates.rs  lib.rs  money.rs  sniff.rs  validate.rs
crates/iso20022-core/src/mt/: block.rs  field.rs  mod.rs  mt103.rs  mt202.rs  mt940.rs  mt942.rs  uetr.rs
crates/iso20022-core/src/mx/: camt.rs  camt053.rs  camt054.rs  common.rs  dom.rs  mod.rs  pacs002.rs  pacs008.rs  pain001.rs
crates/iso20022-core/tests/: fuzz.rs
crates/iso20022-worker/: Cargo.toml
crates/iso20022-worker/src/: arrow_io.rs  cols.rs  lib.rs  main.rs  meta.rs
crates/iso20022-worker/src/scalar/: mod.rs  mt103.rs  mt_type.rs  validate.rs  version.rs
crates/iso20022-worker/src/table/: camt053.rs  camt054.rs  common.rs  mod.rs  mt103.rs  mt202.rs  mt940.rs  mt942.rs  pacs002.rs  pacs008.rs  pain001.rs  scan.rs
crates/iso20022-worker/src/table_in_out/: common.rs  entries.rs  lines.rs  mod.rs
data/camt053/: statement1.xml
data/camt054/: notification1.xml
data/dual/mt/: payment1.txt
data/mt202/: cover1.txt
data/mt940/: statement1.txt
data/mt942/: interim1.txt
data/pacs002/: status1.xml
data/pacs008/: payment1.xml
data/pain001/: initiation1.xml
test/sql/: equivalence.test  readers.test  scalars.test
