[package]
name = "iso20022-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "VGI worker exposing SWIFT MT and ISO 20022 MX payment-message parsers to DuckDB over Apache Arrow. No network, no secrets, no egress — payment data never leaves the host."

[[bin]]
name = "iso20022-worker"
path = "src/main.rs"

[lib]
name = "iso20022_worker"
path = "src/lib.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select = "59"
iso20022-core.workspace = true
rust_decimal = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
log = "0.4"
env_logger = "0.11"
glob = "0.3"

[dev-dependencies]
proptest = "1"
